# camp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cli-release.yml
src/: clapper.rs  curriculum.rs  db.rs  main.rs  user.rs
