[package]
name = "camp"
version = "1.1.1"
edition = "2021"
authors = ["Shaun Hamilton"]
description = "A CLI tool to alter the freeCodeCamp database"
repository = "https://github.com/ShaunHamilton/camp"

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
inquire = "0.7.3"
mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }
proptest = "1.4.0"
proptest-derive = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
